Fix css collapse icon

--- a/src/pages/EmployeeProfile/components/BenefitTab/styles.less
+++ b/src/pages/EmployeeProfile/components/BenefitTab/styles.less
@@ -14,6 +14,13 @@
     div:last-child {
       border: none;
     }
+
+    :global{
+      .ant-collapse-arrow svg {
+        font-size: 20px;
+        color: #2c6df9;
+      }
+    }
   }
   .content {
     display: flex;
